--- a/module/Page/view/partial/layout/footer.phtml
+++ b/module/Page/view/partial/layout/footer.phtml
@@ -10,7 +10,7 @@
             <div class="col-sm-7">
                 <p>Szyk Śląsk © 2015</p>
                 <p>Wszelkie prawa zastrzeżone</p>
-                <p><span>projekt i wykonanie:</span><img src="/img/fabryka.png" alt="fabryka"/></p>
+                <p><span>projekt i wykonanie:</span><a href="http://www.fabrykakreacji.com"><img src="/img/fabryka.png" alt="fabryka"/></a></p>
             </div>
         </div>
     </div>
