--- a/module/Page/view/partial/layout/header.phtml
+++ b/module/Page/view/partial/layout/header.phtml
@@ -13,7 +13,7 @@
                         <b><img src="/img/phone.png" alt="phone"/> 32 261 30 16</b>
                     </div>
                     <div class="col-sm-4 text-right facebook">
-                        <a href="#" class="pull-right"><img src="/img/facebook.png" alt="facebook"/></a>
+                        <a href="https://www.facebook.com/szykmeski" class="pull-right"><img src="/img/facebook.png" alt="facebook"/></a>
                         <div class="pull-right">
                             Odwiedź nas<br/>
                             na Facebooku
